# atp-formal-3sem

./: .gitignore  README.md
prac1/: CMakeLists.txt  README.md  auto.doa  blacklist  index.html  main  main.cpp
prac1/lib/: automaton.h
prac1/src/: CMakeLists.txt
prac1/tests/: CMakeLists.txt  test.cpp
prac1/tests/testcases/: expected.txt  expected01.txt  expectedDFA.txt  in.txt
prac2/: README.md  main.py
prac2/lib/: CYK.py  Earley.py  exceptions.py  grammar.py
prac2/tests/: test_CYK.py  test_Earley.py  test_grammar.py
prac3/: README.md  main.py  pytest.ini
prac3/lib/: exceptions.py  grammar.py  lr.py  ttt.txt
prac3/tests/: test_grammar.py  test_lr.py
